--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^9.1.1",
+    "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
