--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -21,7 +22,8 @@
     "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
