--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^5.3.4",
+    "react-paginate": "^8.1.4",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
