--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "homepage": "https://DmitriyUshkvarok.github.io/goit-react-hw-05-movies/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "debounce": "^1.2.1",
     "formik": "^2.2.9",
+    "lodash.debounce": "^4.0.8",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -21,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-scroll-to-top": "^3.0.0",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.3",
