--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.3.4",
     "debounce": "^1.2.1",
     "formik": "^2.2.9",
+    "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
