--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash.throttle": "^4.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.8.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -29,6 +30,7 @@
     "react-scroll": "^1.8.9",
     "react-scroll-to-top": "^3.0.0",
     "react-select": "^5.7.2",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
     "web-vitals": "^2.1.3",
