--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -25,6 +26,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.1.4",
     "react-player": "^2.12.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
@@ -33,6 +35,7 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.3",
     "yup": "^1.0.2"
   },
