--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^9.1.1",
     "react-youtube": "^10.1.0",
     "styled-components": "^5.3.9",
+    "swiper": "^9.1.1",
     "web-vitals": "^2.1.3",
     "yup": "^1.0.2"
   },
